refactor, add tracing

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -1,4 +1,13 @@
 canvas {
-    cursor: crosshair;
+    float: left;
     outline: solid thin darkgray;
+    cursor: crosshair;
+}
+
+.control-panel {
+    float: left;
+    margin-left: 10px;
+    padding: 10px;
+    display: inline-block;
+    background: lightgray;
 }
